LU-292 srv_n_queued_reqs is screwed up by ptlrpc_unregister_service

service::srv_n_queued_reqs is counter for pre-unpack request on
service::srv_req_in_queue, we shouldn't change it for unpacked request
returned by ptlrpc_server_request_get()

Change-Id: I770411fa8f986fa387a1790f87e6a265abc469f1
Signed-off-by: Liang Zhen <liang@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/1172
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>